[tool.poetry]
name = "ai-bridge"
version = "0.1.0"
description = "A unified bridge for various AI APIs with async support"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
openai = "^1.0"
anthropic = "^0.3"
google-generativeai = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"