[tool.poetry]
name = "ai-bridge"
version = "0.1.0"
description = "A unified bridge for various AI APIs with async support"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
openai = "^1.61"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"